[gd_scene load_steps=2 format=3 uid="uid://cnsnni08j3gds"]

[ext_resource type="Script" path="res://text_engine/nodes/interaction_parser.gd" id="1_8fet0"]

[node name="Node2D" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(577, 325)

[node name="Node" type="Node" parent="."]

[node name="Node2" type="Node" parent="."]

[node name="interaction_parser" type="Node2D" parent="."]
script = ExtResource("1_8fet0")

[node name="interaction_bg" type="ColorRect" parent="interaction_parser"]
offset_right = 1153.0
offset_bottom = 649.0
color = Color(0.145098, 0.145098, 0.145098, 1)

[node name="text_title" type="RichTextLabel" parent="interaction_parser"]
offset_left = 66.0
offset_top = 58.0
offset_right = 906.0
offset_bottom = 105.0
bbcode_enabled = true
text = "I AM A BIG FAT TITLE"

[node name="text_content" type="RichTextLabel" parent="interaction_parser"]
offset_left = 72.0
offset_top = 155.0
offset_right = 887.0
offset_bottom = 337.0
bbcode_enabled = true
text = "I am a whole bunch of text"

[node name="options_content" type="RichTextLabel" parent="interaction_parser"]
offset_left = 68.0
offset_top = 366.0
offset_right = 456.0
offset_bottom = 521.0
bbcode_enabled = true
text = "I am a whole bunch of options"

[connection signal="meta_hover_ended" from="interaction_parser/text_title" to="interaction_parser" method="_on_text_content_meta_hover_ended"]
[connection signal="meta_hover_started" from="interaction_parser/text_title" to="interaction_parser" method="_on_text_content_meta_hover_started"]
[connection signal="meta_hover_ended" from="interaction_parser/text_content" to="interaction_parser" method="_on_text_content_meta_hover_ended"]
[connection signal="meta_hover_started" from="interaction_parser/text_content" to="interaction_parser" method="_on_text_content_meta_hover_started"]
[connection signal="meta_clicked" from="interaction_parser/options_content" to="interaction_parser" method="_on_options_content_meta_clicked"]
[connection signal="meta_hover_ended" from="interaction_parser/options_content" to="interaction_parser" method="_on_text_content_meta_hover_ended"]
[connection signal="meta_hover_started" from="interaction_parser/options_content" to="interaction_parser" method="_on_text_content_meta_hover_started"]
